--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Hi my name is David</h1>
-						<p>Willkommen auf meinem online Portfolio!</p>
+						<h1>Haris welcomes you</h1>
+						<p>Explore some of things about me</p>
 						<ul class="actions">
 							<li><a href="#nav" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -30,11 +30,10 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">About me</a></li>
-							<li><a href="generic copy.html">Abschlussarbeit Informatik</a></li>
-							<li><a href="generic.html">Arbeiten Data Science</a></li>
-							<li><a href="https://www.linkedin.com/in/dedic-d-0aa54610b/">LinkedIn</a></li>
-							<li><a href="https://github.com/daviddedicfhwn">Github</a></li>
-							<li><a href="generic copy 2.html">Zerfitikate</a></li>
+							<li><a href="generic_work.html">Work experiences</a></li>
+							<li><a href="generic_study.html">Study experiences</a></li>
+							<li><a href="https://www.linkedin.com/in/haris-alic-4a545a151/">LinkedIn</a></li>
+							<li><a href="generic_spare_time.html">Spare Time</a></li>
 						</ul>
 					</nav>
 
