--- a/generic_spare_time.html
+++ b/generic_spare_time.html
@@ -26,11 +26,11 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">About me</a></li>
-							<li><a href="generic copy.html">Abschlussarbeit Informatik</a></li>
-							<li><a href="generic.html">Arbeiten Data Science</a></li>
+							<li><a href="generic_work.html">Abschlussarbeit Informatik</a></li>
+							<li><a href="generic_study.html">Arbeiten Data Science</a></li>
 							<li><a href="https://www.linkedin.com/in/dedic-d-0aa54610b/">LinkedIn</a></li>
 							<li><a href="https://github.com/daviddedicfhwn">Github</a></li>
-							<li><a href="generic copy 2.html">Zerfitikate</a></li>
+							<li><a href="generic_spare_time.html">Zerfitikate</a></li>
 						</ul>
 						
 					</nav>
