--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<li><a href="generic_work.html">Work experiences</a></li>
 							<li><a href="generic_study.html">Study experiences</a></li>
 							<li><a href="https://www.linkedin.com/in/haris-alic-4a545a151/">LinkedIn</a></li>
-							<li><a href="generic_spare_time.html">Spare Time</a></li>
+							<li><a href="generic_download.html">Download</a></li>
 						</ul>
 					</nav>
 
@@ -43,23 +43,16 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class = 'date'>Akt. November 02, 2022</span>
-									<h2>Das bin ich!</h2>
-									<p>Angehender Data Scientist mit Gruppenleiter Kenntnissen mittels Gemeinnütziger Arbeit. Durchführen diverser Projekte während Studienzeit. Strukturiertes Herangehen an komplexe Arbeiten, fundierte Computererfahrung durch Informatik Ausbildung. Ziel Gründung eines Data Science Unternehmens.</p>
+									<span class = 'date'>LST UPDT March 18, 2023</span>
+									<h2>In a nutshell</h2>
+									<p>Persevering and being passionate about achieving the best result are just as important to me as motivating my fellow human beings.<br />
+									I am currently working as a software developer in the retail industry, developing a Data Hub system using cutting-edge approaches.<br />
+									Looking for part-time work in machine learning or software development in another industry such as finance, biotech, or technology in general.
+									</p>
 								</header>
 								<a class="center"><img src="images/pic01.jpg" alt="" style="width:500px;height:600px;"/></a>
-								<p>Bereits während meiner Ausbildung als Informatiker Richtung <b>Systemtechnik</b>
-									, wurde mir bewusst, die Arbeit mit Daten fasziniert mich. Die Datenbankkenntnisse
-									und die Vorliebe fürs Programmieren wurde dementsprechen über diese 4 Jahre
-									bereits angelernt. Deshalb war bereits wärend dieser Zeit bewusst welchen
-									Weg ich einschreiten möchte. Ich habe mich daher für ein Studium im Bereich <b>Data Science</b> entschieden.
-									Durch die Abschliessung der Technischen Berufsmatura, war mir dies auch möglich.
-									Dieses Studium bietet mir die Möglichkeit, meine bereits vorhandenen Kenntnisse zu vertiefen und neue zu erlernen.
-									Durch die Vielfältigkeit der Studieninhalte, konnte ich mich auf die Bereiche konzentrieren, die mich besonders interessieren.
-									Dies sind vor allem die Bereiche <b>Machine Learning</b> und <b>Deep Learning</b>, welche 
-									täglich aktueller werden.<br>
-									In folgendem Portofolio werde ich dir einige meiner Arbeiten vorstellen, welche ich während meines Studiums 
-									und meiner Ausbildung erstellt habe. 
+								<p>
+									
 								</p>
 							</article>	
 					</div>
