--- a/generic_study.html
+++ b/generic_study.html
@@ -30,7 +30,7 @@
 							<li><a href="generic_study.html">Arbeiten Data Science</a></li>
 							<li><a href="https://www.linkedin.com/in/dedic-d-0aa54610b/">LinkedIn</a></li>
 							<li><a href="https://github.com/daviddedicfhwn">Github</a></li>
-							<li><a href="generic_spare_time.html">Zerfitikate</a></li>
+							<li><a href="generic_download.html">Zerfitikate</a></li>
 						</ul>
 						
 					</nav>
