--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 									Looking for part-time work in machine learning or software development in another industry such as finance, biotech, or technology in general.
 									</p>
 								</header>
-								<a class="center"><img src="images/pic01.jpg" alt="" style="width:500px;height:600px;"/></a>
+								<a class="center"><img src="images/pic01.jpg" alt="" style="width:1000px;height:600px;"/></a>
 								<p>
-									
+									Deep Dive into my background
 								</p>
 							</article>	
 					</div>
