--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@
 									</p>
 								</header>
 								<a class="center"><img src="images/pic01.jpg" alt="" style="width:1000px;height:600px;"/></a>
+								<h2>Deep Dive</h2>
 								<p>
-									Deep Dive into my background
+									I started working in the age of 16 in the sector of logistics. I was fascinated by the topics in supply chain, how globalization works and how it will affect our future life.
+									After the certificate in proficiency in logistics I decided to consolidate my knowledge in this field and completed an education in industrial engineering and internation logistics.
+									Designing, controlling and optimizing processes economically are exciting for me. I learned how to strive for energy-efficient processes by analyzing and continuously improving them to
+									increase effiecency and minimizing costs. My diploma thesis was about a management concept for a Food Tech company based in Switzerland with locations throughout europe.
 								</p>
 							</article>	
 					</div>
