--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 									</p>
 								</header>
 								<a class="center"><img src="images/pic01.jpg" alt="" style="width:800px;height:600px;"/></a>
+								<header>
 								<h2>Deep Dive</h2>
 								<p>
 									I started working in the age of 16 in the sector of logistics. I was fascinated by the topics in supply chain, how globalization works and how it will affect our future life.
@@ -58,6 +59,7 @@
 									Designing, controlling and optimizing processes economically are exciting for me. I learned how to strive for energy-efficient processes by analyzing and continuously improving them to
 									increase effiecency and minimizing costs. My diploma thesis was about a management concept for a Food Tech company based in Switzerland with locations throughout europe.
 								</p>
+								</header>
 							</article>	
 					</div>
 				<!-- Inhalt -->
