--- a/index.html
+++ b/index.html
@@ -54,10 +54,7 @@
 								<header>
 								<h2>Deep Dive</h2>
 								<p>
-									I started working in the age of 16 in the sector of logistics. I was fascinated by the topics in supply chain, how globalization works and how it will affect our future life.
-									After the certificate in proficiency in logistics I decided to consolidate my knowledge in this field and completed an education in industrial engineering and internation logistics.
-									Designing, controlling and optimizing processes economically are exciting for me. I learned how to strive for energy-efficient processes by analyzing and continuously improving them to
-									increase effiecency and minimizing costs. My diploma thesis was about a management concept for a Food Tech company based in Switzerland with locations throughout europe.
+									I started working in the logistics industry at the age of 16. I was fascinated by supply chain issues, how globalization works and how it will affect our future lives. After graduating from high school with a degree in logistics, I decided to deepen my knowledge in this field and completed an apprenticeship in industrial engineering and international logistics. For me it is exciting to design, control and optimize processes economically. I learned how to strive for energy-efficient processes by analyzing and continuously improving them to increase efficiency and minimize costs. My thesis dealt with a management concept for a food tech company based in Switzerland with locations all over Europe. I am currently working as a software developer for a luxury retail company. The integration of informatics and data science into a company is necessary for its continued existence. This is the reason why I first pursued self-study and then decided to study Data Science on a part-time basis. I am looking forward to a great future with technologically advanced companies around the world.
 								</p>
 								</header>
 							</article>	
