--- a/index.html
+++ b/index.html
@@ -84,18 +84,18 @@
 						</section>
 						<section class="split contact">
 							<section class="alt">
-								<h3>Adresse</h3>
-								<p>Solothurn<br />
-								Schweiz</p>
+								<h3>Address</h3>
+								<p>Aargau<br />
+								Switzerland</p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p>david.dedic@students.fhnw.ch</p>
+								<p>haris-alic@hotmail.de</p>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://github.com/daviddedicfhwn" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/haris-alic-4a545a151/" class="fab fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								</ul>
 							</section>
 						</section>
