--- a/index.html
+++ b/index.html
@@ -62,18 +62,18 @@
 				<!-- Inhalt -->
 					<footer id="footer">
 						<section>
-							<form method="post" action="mailto: david.dedic@students.fhnw.ch" name="EmailForm">
+							<form method="post" action="mailto: haris-alic@hotmail.de" name="EmailForm">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
 									</div>
 									<div class="field">
-										<label for="email">Bezüglich</label>
+										<label for="email">Topic</label>
 										<input type="text" name="email" id="email" />
 									</div>
 									<div class="field">
-										<label for="message">Nachricht</label>
+										<label for="message">Message</label>
 										<textarea name="message" id="message" rows="3"></textarea>
 									</div>
 								</div>
@@ -103,7 +103,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; David Dedic</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Haris Alic</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
