--- a/generic_download.html
+++ b/generic_download.html
@@ -53,13 +53,10 @@
 						<section class="posts">
 							<article>
 								<header>
-									<span class="date">2016</span>
-									<h2>English Certicate B2<br /></h2>
+									<h2>CV<br /></h2>
 								</header>
-								<a class="image fit"><img src="images/cambridge.png"/></a>
-								<p>
-									
-								</p>
+								<p>Click the link below to download my CV</p>
+								<a href="images/V01_Neu_Lebenslauf_english.pdf" download>Download File</a>
 							</article>
 							
 						</section>
