--- a/generic_download.html
+++ b/generic_download.html
@@ -26,13 +26,11 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">About me</a></li>
-							<li><a href="generic_work.html">Abschlussarbeit Informatik</a></li>
-							<li><a href="generic_study.html">Arbeiten Data Science</a></li>
-							<li><a href="https://www.linkedin.com/in/dedic-d-0aa54610b/">LinkedIn</a></li>
-							<li><a href="https://github.com/daviddedicfhwn">Github</a></li>
-							<li><a href="generic_download.html">Zerfitikate</a></li>
+							<li><a href="generic_work.html">Work experiences</a></li>
+							<li><a href="generic_study.html">Study experiences</a></li>
+							<li><a href="https://www.linkedin.com/in/haris-alic-4a545a151/">LinkedIn</a></li>
+							<li><a href="generic_download.html">Download</a></li>
 						</ul>
-						
 					</nav>
 
 				<!-- Main -->
