--- a/generic_download.html
+++ b/generic_download.html
@@ -45,7 +45,7 @@
 								</header>
 							</section>
 						<!-- Posts -->
-						<section class="posts">
+						<section class="download">
 							<article>
 								<header>
 									<h2>CV<br /></h2>
@@ -60,18 +60,18 @@
 				<!-- Inhalt -->
 				<footer id="footer">
 					<section>
-						<form method="post" action="mailto: david.dedic@students.fhnw.ch" name="EmailForm">
+						<form method="post" action="mailto: haris-alic@hotmail.de" name="EmailForm">
 							<div class="fields">
 								<div class="field">
 									<label for="name">Name</label>
 									<input type="text" name="name" id="name" />
 								</div>
 								<div class="field">
-									<label for="email">Bezüglich</label>
+									<label for="email">Topic</label>
 									<input type="text" name="email" id="email" />
 								</div>
 								<div class="field">
-									<label for="message">Nachricht</label>
+									<label for="message">Message</label>
 									<textarea name="message" id="message" rows="3"></textarea>
 								</div>
 							</div>
@@ -82,27 +82,27 @@
 					</section>
 					<section class="split contact">
 						<section class="alt">
-							<h3>Adresse</h3>
-							<p>Solothurn<br />
-							Schweiz</p>
+							<h3>Address</h3>
+							<p>Aargau<br />
+							Switzerland</p>
 						</section>
 						<section>
 							<h3>Email</h3>
-							<p>david.dedic@students.fhnw.ch</p>
+							<p>haris-alic@hotmail.de</p>
 						</section>
 						<section>
 							<h3>Social</h3>
 							<ul class="icons alt">
-								<li><a href="https://github.com/daviddedicfhwn" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/haris-alic-4a545a151/" class="fab fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 						</section>
 					</section>
 				</footer>
 
 			<!-- Copyright -->
-				<div id="copyright">
-					<ul><li>&copy; David Dedic</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-				</div>
+			<div id="copyright">
+				<ul><li>&copy; Haris Alic</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+			</div>
 
 		</div>
 
