--- a/generic_study.html
+++ b/generic_study.html
@@ -48,7 +48,7 @@
 						<section class="posts">
 							<article>
 								<header>
-									<span class="date">2021</span>
+									<span class="date">2019</span>
 									<h2>Diploma Thesis</h2>
 								</header>
 								<a class="image fit"><img src="images/pic03.jpg"/></a>
@@ -59,16 +59,12 @@
 							<article>
 								<header>
 									<span class="date">2022</span>
-									<h2>Klimadaten auswertung</h2>
+									<h2>Real Estate Calculator<br />
+									with Machine Learning</h2>
 								</header>
 								<a class="image fit"><img src="images/pic04.jpg"/></a>
 								<p>
-									Die Hauptaufgabe war es, ein interaktives Dashboar zu erstellen.
-									Dieses sollte die Klimadaten der letzten 50 Jahre auswerten.
-									Dabei sollte es möglich sein, die Daten nach verschiedenen
-									Kriterien zu filtern. Es wurde auf Korrelation zwischen
-									Extremregenfällen und dem Wirtschaftsertrag getestet.
-									Die Auswertung wurde mit Python ausgeführt.
+									tbd text about real estate calculator
 								</p>
 							</article>
 							<article>
