--- a/generic_study.html
+++ b/generic_study.html
@@ -51,7 +51,7 @@
 									<span class="date">2019</span>
 									<h2>Diploma Thesis</h2>
 								</header>
-								<a class="image fit"><img src="images/pic03.jpg"/></a>
+								<a class="image fit"><img src="images/diploma_thesis.jpg"/></a>
 								<p> <br><br>
 									tbd text about diploma thesis
 								</p>
