--- a/generic_study.html
+++ b/generic_study.html
@@ -59,8 +59,10 @@
 							<article>
 								<header>
 									<span class="date">2022</span>
-									<h2>Real Estate Calculator<br />
-									with Machine Learning</h2>
+									<a href="https://immoprice.ch/">
+										<h2>Real Estate Calculator<br />
+										with Machine Learning</h2>
+									</a>
 								</header>
 								<a class="image fit"><img src="images/pic04.jpg"/></a>
 								<p>
