--- a/generic_study.html
+++ b/generic_study.html
@@ -60,8 +60,7 @@
 								<header>
 									<span class="date">2022</span>
 									<a href="https://immoprice.ch/">
-										<h2>Real Estate Calculator<br />
-										with Machine Learning</h2>
+										<h2 title="Real Estate Calculator">Real Estate Calculator<br /></h2>
 									</a>
 								</header>
 								<a class="image fit"><img src="images/pic04.jpg"/></a>
@@ -71,8 +70,8 @@
 							</article>
 							<article>
 								<header>
-									<span class="date">2022</span>
-									<h2><a href="#">Reccomender<br />
+									<span class="date">2021</span>
+									<h2><a href="#">Data Science and IoT<br />
 									für Filme</a></h2>
 								</header>
 								<a class="image fit"><img src="images/pic05.jpg"/></a>
