--- a/generic_study.html
+++ b/generic_study.html
@@ -59,9 +59,9 @@
 							<article>
 								<header>
 									<span class="date">2022</span>
-									<a href="https://immoprice.ch/">
-										<h2 title="Real Estate Calculator">Real Estate Calculator<br /></h2>
-									</a>
+									<h2>
+										<a href="https://immoprice.ch/">Real Estate Calculator<br /></a>
+									</h2>
 								</header>
 								<a class="image fit"><img src="images/pic04.jpg"/></a>
 								<p>
