--- a/generic_study.html
+++ b/generic_study.html
@@ -63,7 +63,7 @@
 										<a href="https://immoprice.ch/">Real Estate Calculator<br /></a>
 									</h2>
 								</header>
-								<a class="image fit"><img src="images/pic04.jpg"/></a>
+								<a class="image fit"><img src="images/real_estate_calculator.png"/></a>
 								<p>
 									tbd text about real estate calculator
 								</p>
