--- a/generic_download.html
+++ b/generic_download.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Zurück zum Start</a>
+						<a href="index.html" class="logo">Back to home page</a>
 					</header>
 
 				<!-- Nav -->
