--- a/generic_work.html
+++ b/generic_work.html
@@ -53,7 +53,7 @@
 									<span class="date">2016</span>
 									<h2>Onboarder</h2>
 								</header>
-								<a class="image fit"><img src="images/pic02.jpg"/></a>
+								<a class="image fit"><img src="images/onboarder.png"/></a>
 								<p>
 									Getting product data from suppliers is not always easy.  Our Onboarder helps you: The platform captures product information from suppliers and manufacturers securely and quickly. It standardizes the way product data is integrated - the best prerequisite for creating high-quality and accurate product directories.
 								</p>
