--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Haris welcomes you</h1>
-						<p>Explore some of things about me</p>
+						<p>Get to know me</p>
 						<ul class="actions">
 							<li><a href="#nav" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -43,8 +43,8 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class = 'date'>LST UPDT March 18, 2023</span>
-									<h2>In a nutshell</h2>
+									<span class = 'date'>March 18, 2023</span>
+									<h3>In a nutshell</h3>
 									<p>Persevering and being passionate about achieving the best result are just as important to me as motivating my fellow human beings.<br />
 									I am currently working as a software developer in the retail industry, developing a Data Hub system using cutting-edge approaches.<br />
 									Looking for part-time work in machine learning or software development in another industry such as finance, biotech, or technology in general.
