--- a/generic_work.html
+++ b/generic_work.html
@@ -49,7 +49,7 @@
 						<section class="posts">
 							<article>
 								<header>
-									<span class="date">2022</span>
+									<span class="date">2021</span>
 									<h2>Onboarder</h2>
 								</header>
 								<a class="image fit"><img src="images/onboarder.png"/></a>
@@ -69,7 +69,17 @@
 									tbd
 								</p>
 							</article>
-
+							<article>
+								<header>
+									<span class="date">2019</span>
+									<h2>Agile<br />
+									etablieren</h2>
+								</header>
+								<a class="image fit"><img src="images/agile.png"/></a>
+								<p>
+									tbd
+								</p>
+							</article>
 						</section>
 					</div>
 
