--- a/generic_work.html
+++ b/generic_work.html
@@ -49,7 +49,7 @@
 						<section class="posts">
 							<article>
 								<header>
-									<span class="date">2021</span>
+									<span class="date">2022</span>
 									<h2>Onboarder</h2>
 								</header>
 								<a class="image fit"><img src="images/onboarder.png"/></a>
@@ -73,7 +73,18 @@
 								<header>
 									<span class="date">2019</span>
 									<h2>Agile<br />
-									etablieren</h2>
+									establish</h2>
+								</header>
+								<a class="image fit"><img src="images/agile.png"/></a>
+								<p>
+									tbd
+								</p>
+							</article>
+							<article>
+								<header>
+									<span class="date">2018</span>
+									<h2>Logistic<br />
+									Project</h2>
 								</header>
 								<a class="image fit"><img src="images/agile.png"/></a>
 								<p>
