--- a/generic_work.html
+++ b/generic_work.html
@@ -54,19 +54,19 @@
 								</header>
 								<a class="image fit"><img src="images/onboarder.png"/></a>
 								<p>
-									Getting product data from suppliers is not always easy.  Our Onboarder helps you: The platform captures product information from suppliers and manufacturers securely and quickly. It standardizes the way product data is integrated - the best prerequisite for creating high-quality and accurate product directories.
+									Getting product data from suppliers is not easy. The Onboarder captures product information from suppliers and manufacturers securely and quickly. It standardizes the way product data is integrated - the best prerequisite for creating high-quality and accurate product directories.
 								</p>
 							</article>
 							<article>
 								<header>
 									<span class="date">2020</span>
-									<h2>Zentralisierung<br />
-										Stammdaten
+									<h2>Centralization<br />
+										Master Data
 									</h2>
 								</header>
 								<a class="image fit"><img src="images/pim.png"/></a>
 								<p>
-									tbd
+									I worked as a sub-project manager on the implementation of a new PIM (Product Information Management) system. It allows collecting, managing and enriching product information in a single place and distributing it to sales, eCommerce, marketplace, etc. channels.
 								</p>
 							</article>
 							<article>
