--- a/generic_work.html
+++ b/generic_work.html
@@ -77,18 +77,17 @@
 								</header>
 								<a class="image fit"><img src="images/agile.png"/></a>
 								<p>
-									tbd
+									I worked as SCRUM Master when we decided to establish an agile working culture. I led the meetings, was responsible for the presentations to the stakeholders and wrote our agile manifesto.
 								</p>
 							</article>
 							<article>
 								<header>
 									<span class="date">2018</span>
-									<h2>Logistic<br />
-									Project</h2>
+									<h2>Logistic Projects<br />& Leading Experiences</h2>
 								</header>
 								<a class="image fit"><img src="images/agile.png"/></a>
 								<p>
-									tbd
+									During my time in logistics, I worked as a sub-project manager where we had to set up a new returns department for our growing online store. There I also had the opportunity to lead a team for the first time.
 								</p>
 							</article>
 						</section>
