--- a/generic_work.html
+++ b/generic_work.html
@@ -54,7 +54,7 @@
 								</header>
 								<a class="image fit"><img src="images/onboarder.png"/></a>
 								<p>
-									Getting product data from suppliers is not easy. The Onboarder captures product information from suppliers and manufacturers securely and quickly. It standardizes the way product data is integrated - the best prerequisite for creating high-quality and accurate product directories.
+									Getting product data from suppliers is not easy. The Onboarder which I was allowed to help develop captures product information from suppliers and manufacturers securely and quickly. It standardizes the way product data is integrated - the best prerequisite for creating high-quality and accurate product directories.
 								</p>
 							</article>
 							<article>
