--- a/generic_work.html
+++ b/generic_work.html
@@ -85,7 +85,7 @@
 									<span class="date">2018</span>
 									<h2>Logistic Projects<br />& Leading Experiences</h2>
 								</header>
-								<a class="image fit"><img src="images/agile.png"/></a>
+								<a class="image fit"><img src="images/logistic.jpg"/></a>
 								<p>
 									During my time in logistics, I worked as a sub-project manager where we had to set up a new returns department for our growing online store. There I also had the opportunity to lead a team for the first time.
 								</p>
