--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
 				<!-- Inhalt -->
 					<footer id="footer">
 						<section>
+							<a href="mailto:example@example.com">Click here to send an email</a>
+						</section>
+						<section>
 							<form method="post" action="mailto: haris-alic@hotmail.de" name="EmailForm">
 								<div class="fields">
 									<div class="field">
