--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<!-- Inhalt -->
 					<footer id="footer">
 						<section>
-							<a href="mailto:example@example.com">Click here to send an email</a>
+							<a href="haris-alic@hotmail.de">Click here to send me an email</a>
 						</section>
 						<section class="split contact">
 							<section class="alt">
