--- a/generic_download.html
+++ b/generic_download.html
@@ -60,25 +60,7 @@
 				<!-- Inhalt -->
 				<footer id="footer">
 					<section>
-						<form method="post" action="mailto: haris-alic@hotmail.de" name="EmailForm">
-							<div class="fields">
-								<div class="field">
-									<label for="name">Name</label>
-									<input type="text" name="name" id="name" />
-								</div>
-								<div class="field">
-									<label for="email">Topic</label>
-									<input type="text" name="email" id="email" />
-								</div>
-								<div class="field">
-									<label for="message">Message</label>
-									<textarea name="message" id="message" rows="3"></textarea>
-								</div>
-							</div>
-							<ul class="actions">
-								<li><input type="submit" value="Send Message" /></li>
-							</ul>
-						</form>
+						<a href="haris-alic@hotmail.de">Click here to send me an email</a>
 					</section>
 					<section class="split contact">
 						<section class="alt">
