--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 					</div>
 				<!-- Inhalt -->
 					<footer id="footer">
-						<section>
+						<!-- <section>
 							<a href="haris-alic@hotmail.de">Click here to send me an email</a>
-						</section>
+						</section> -->
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
