Update index text

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class = 'date'>March 18, 2023</span>
+									<span class = 'date'>February 27, 2024</span>
 									<h3>In a nutshell</h3>
 									<p>Persevering and being passionate about achieving the best result are just as important to me as motivating my fellow human beings.<br />
 									I am currently working as a software developer in the retail industry, developing a Data Hub system using cutting-edge approaches.<br />
@@ -54,7 +54,7 @@
 								<header>
 								<h2>Deep Dive</h2>
 								<p>
-									I started working in the logistics industry at the age of 16. I was fascinated by supply chain issues, how globalization works and how it will affect our future lives. After graduating from high school with a degree in logistics, I decided to deepen my knowledge in this field and completed an apprenticeship in industrial engineering and international logistics. For me it is exciting to design, control and optimize processes economically. I learned how to strive for energy-efficient processes by analyzing and continuously improving them to increase efficiency and minimize costs. My thesis dealt with a management concept for a food tech company based in Switzerland with locations all over Europe. I am currently working as a software developer for a luxury retail company. The integration of informatics and data science into a company is necessary for its continued existence. This is the reason why I first pursued self-study and then decided to study Data Science on a part-time basis. I am looking forward to a great future with technologically advanced companies around the world.
+									I started working in the automation and logistics industry at the age of 16. I was fascinated by supply chain issues, how globalisation works and how it will affect our lives in the future. After graduating from vocational school with a degree in logistics, I decided to deepen my knowledge in this field and completed a professional bachelor's degree in industrial engineering and international logistics. I find it exciting to design, control and optimise processes economically. I learned how to strive for energy-efficient processes by analysing and continuously improving them in order to increase efficiency and minimise costs. My thesis was on a management concept for a food tech company based in Switzerland with sites across Europe. I am currently working as a software developer for a retail company. The integration of IT and data science into a company is necessary for its continued existence. For this reason, I decided to study Data Science, first on a self-study programme and then part-time. I am looking forward to a great future in technologically advanced companies all over the world.
 								</p>
 								</header>
 							</article>	
@@ -67,7 +67,7 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>Aargau<br />
+								<p>Zurich<br />
 								Switzerland</p>
 							</section>
 							<section>
