Update study text

--- a/generic_study.html
+++ b/generic_study.html
@@ -50,12 +50,12 @@
 								<header>
 									<span class="date">2022</span>
 									<h2>
-										<a href="https://immoprice.ch/">Real Estate Calculator<br /></a>
+										Real Estate Calculator
 									</h2>
 								</header>
 								<a class="image fit"><img src="images/real_estate_calculator.png"/></a>
 								<p>
-									Based on thousands of real estate data, we built a machine learning model that predicts the price based on some given attributes.
+									Based on thousands of real estate data, we built a machine learning model that predicts the price based on some attributes, e.g. location, type, m2, etc.
 								</p>
 							</article>
 							<article>
@@ -92,7 +92,7 @@
 					<section class="split contact">
 						<section class="alt">
 							<h3>Address</h3>
-							<p>Aargau<br />
+							<p>Zurich<br />
 							Switzerland</p>
 						</section>
 						<section>
