Update work text

--- a/generic_work.html
+++ b/generic_work.html
@@ -54,15 +54,13 @@
 								</header>
 								<a class="image fit"><img src="images/onboarder.png"/></a>
 								<p>
-									Getting product data from suppliers is not easy. The Onboarder which I was allowed to help develop captures product information from suppliers and manufacturers securely and quickly. It standardizes the way product data is integrated - the best prerequisite for creating high-quality and accurate product directories.
+									The Onboarder is a complex orchestration system that runs in the cloud. It takes data from various sources as input, e.g. suppliers, internet, marketplace, etc., and enriches product data with the help of machine learning or customised mappings. The result is high data quality, a high degree of automation and a faster time-to-market cycle.
 								</p>
 							</article>
 							<article>
 								<header>
 									<span class="date">2020</span>
-									<h2>Centralization<br />
-										Master Data
-									</h2>
+									<h2>PIM</h2>
 								</header>
 								<a class="image fit"><img src="images/pim.png"/></a>
 								<p>
