Change CV, rename study headers

--- a/generic_study.html
+++ b/generic_study.html
@@ -55,7 +55,7 @@
 					<header>
 						<span class="date">2023</span>
 						<h2>
-							Deep Learning TS Classification
+							Appliance Detection
 						</h2>
 					</header>
 					<a class="image fit"><img src="images/time_series.png" /></a>
